--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 			<a href="influcid-LT/index.html">influcid-LT</a>
 			<a href="Tansilotren-Li/index.html">Tansilotren-Li</a>
 			<a href="SwissPharm/index.html">SwissPharm</a>
+			<a href="prospan-new/index.html">prospan-new</a>
 			
 		</section>
 	</main>
@@ -212,6 +213,9 @@
 	}
 	a:nth-child(42)::before {
 		background: url("./SwissPharm/logo.svg")no-repeat center / contain;
+	}
+	a:nth-child(43)::before {
+		background: url("./prospan-new/logo.svg")no-repeat center / contain;
 	}
 </style>
 
