--- a/prospan-new/index.html
+++ b/prospan-new/index.html
@@ -20,14 +20,14 @@
     <div class="outer-navigation-container">
         <div class="navigation-container">
             <a class="logo-container" href="#top"></a>
-            <a class="where-to-buy-mob" href="#block-6">ДЕ КУПИТИ</a>
+            <a class="where-to-buy-mob" href="#block-5">ДЕ КУПИТИ</a>
             <div class="navigation-menu">
                 <a class="navmenu" href="#block-1" >Преимущества</a>
                 <a class="navmenu" href="#block-2">Состав и действие</a>
                 <a class="navmenu" href="#block-3">Как принимать</a>
                 <a class="navmenu" href="#block-4">Полезная информация</a>
 
-                <a class=" where-to-buy" href="#block-6">ДЕ КУПИТИ</a>
+                <a class=" where-to-buy" href="#block-5">ДЕ КУПИТИ</a>
                 <a class="lang lang-dop"><b>RU</b></a><a class="lang" href="index-ru.html"><p>EN</p></a>
             </div>
 
@@ -39,7 +39,7 @@
                     <ul id="menu">
                         <li>
 
-                            <input class="input-li" type="checkbox"/><a class="navmenu menuLi" href="#block-1" >Преимущества
+                            <a class="navmenu menuLi" href="#block-1" >Преимущества
 
                             </a>
                         </li>
@@ -53,7 +53,7 @@
                             <a class="navmenu menuLi" href="#block-4">Полезная информация</a>
                         </li>
                         <li>
-                            <a class=" where-to-buy" href="#block-4">ГДЕ КУПИТЬ</a>
+                            <a class=" where-to-buy" href="#block-5">ГДЕ КУПИТЬ</a>
                         </li>
                         <li>
                             <a class="lang lang-dop"><b>RU</b></a><a class="lang" href="index-ru.html"><p>EN</p></a>
@@ -86,9 +86,19 @@
                     <div class="header-block_img-germ"></div>
                 </div>
             </div>
+            <div class="puppet">
+                <a name="block-1"></a>
+
+            </div>
+
         </div>
     </div>
-
+    <div class="mobile-block1">
+        <h1>Cила природы<br> против кашля</h1>
+        <div class="mob-header-block_img">
+            <div class="mob-header-block_img-germ"></div>
+        </div>
+    </div>
     <div class="block-1_outer">
         <div class="block-1_inner">
             <h2>ПРЕИМУЩЕСТВА</h2>
@@ -101,9 +111,9 @@
 
                 <p>Не содержит красителей и сахара</p>
 
-                <p>Выпускается во флаконах с инновационным дозатором</p>
+                <p>Выпускается во флаконах<br> с инновационным дозатором</p>
 
-                <p>Признан одним из наиболее надежных препаратов от кашля в Германии*</p>
+                <p>Признан одним из наиболее надежных<br> препаратов от кашля в Германии*</p>
             </div>
 
         </div>
@@ -111,7 +121,12 @@
 
 
     <div class="block-2_outer">
+
         <div class="block-2_inner">
+            <div class="puppet">
+                <a name="block-2"></a>
+
+            </div>
             <h2>СОСТАВ И ДЕЙСТВИЕ</h2>
             <p>Оригинальный стандартизированный сухой экстракт листье<br>в плюща EA 575®, оказывающий комплексное действие при всех видах кашля</p>
         </div>
@@ -128,7 +143,16 @@
             </div>
         </div>
     </div>
-
+        <div class="mob-block-3_inner">
+            <div class="mob-block-3_text">
+                <p>Разжижает<br>
+                    и выводит слизь</p>
+                <p>Расширяет<br>бронхи</p>
+                <p>Облегчает<br>кашель</p>
+                <p>Снимает<br>воспаление</p>
+            </div>
+        </div>
+<a name="block-3"></a>
     <div class="block-4_outer">
         <div class="block-4_inner">
             <h2>КАК ПРИНИМАТЬ</h2>
@@ -168,30 +192,134 @@
             <p class="block-4_inner-text">1 мл  = 29 капель препарата. Капли следует принимать перед приемом пищи.<br>Допускается принимать капли с небольшим количеством воды.<br>Взбалтывайте флакон перед каждым применением.</p>
         </div>
     </div>
-
-
-
-
-<a name="block-1"></a>
-
-
-
-
-
-<a name="block-2"></a>
-
-
-
-<a name="block-3"></a>
-
-
-
-
 <a name="block-4"></a>
+    <div class="block-5_outer">
+        <div class="block-5_inner">
+            <h2>ПОЛЕЗНАЯ ИНФОРМАЦИЯ</h2>
+            <div class="usless-line"></div>
+            <div class="block-5_container">
+                <div class="block-5__container-content">
+                    <div class="usless-head-accordeon usless-head-accordeon1">
+                        <div class="usless-head-accordeon_img"></div>
+                        <div>
+                            <h4>Кашель у детей</h4>
+                            <p>
+                                История болезни должна охватывать продолжительность и качество кашля (лающий, резкий сухой, приступообразный), его начало (острый или хронический).
+                            </p>
+                        </div>
+
+                    </div>
+
+                    <!--          //////-->
+                    <div class="panel">
+                        <h4>Кашель у детей</h4>
+                        <p>
+                            История болезни должна охватывать продолжительность и качество кашля (лающий, резкий сухой, приступообразный), его начало (острый или хронический).
+                        </p>
+                        <div class="panel-img"></div>
+                        <p>
+                            История создания препарата от кашля Проспан (Prospan®)<br>В связи с тяжелыми приступами кашля у своей дочери, страдавшей от коклюша, д-р Карл Энгельгард (Karl Engelhard), фармацевт и владелец компании «Engelhard Arzneimittel GmbH & Co. KG» в 3-м поколении, в 1949 году начал исследования лечебных свойств растения Hedera helix, которое было известно своим свойством устранять кашель.<br>
+
+                            В ходе исследований ученые из лаборатории Энгельгарда обнаружили, что листья – это та часть Hedera helix, в котором содержится наивысшая концентрация активных ингредиентов растения. Для получения действующего вещества препарата Проспан® был разработан специальный метод экстракции.<br>
+
+                            Сушеные и нарезанные листья плюща при изготовлении Проспан® подвергают экстракции 30 %-м этанолом, при которой активные ингредиенты плюща переходят в состав экстрагента. Этот метод известен как спиртовая экстракция.<br>
+
+                            Для получения той или иной рецептуры Проспан® с экстрактом из сухих листьев плюща в последующем этот жидкий экстракт, обогащенный активными ингредиентами из плюща, подвергают высушиванию. Полученный таким образом остаток (т.н. сухой экстракт) не содержит алкоголя.<br>
+
+                            Так в 1950 году появился первый лекарственный препарат компании - капли Проспан®.<br>
+
+                            Дальнейшие научные исследования привели к разработке других лекарственных форм, например, сироп от кашля Проспан® (продается в Германии с 1991 г.) – не содержащий алкоголя, сахара и красителей. Проспан® содержит экстракт плюща, который к тому же имеет очень приятный вишневый вкус, и поэтому особенно хорошо воспринимается детьми.<br>
+
+                            Сегодня доступны и другие лекарственные формы, включая Проспан Саше (сироп по 5 мл в индивидуальных пакетиках).
+                        </p>
+                    </div>
+                    <button class="accordion accordion1"></button>
+                    <!--          //////-->
+                </div>
+            <div class="usless-line"></div>
+            <div class="usless-head-accordeon usless-head-accordeon2">
+                <div class="usless-head-accordeon_img"></div>
+                <div>
+                    <h4>Кашель у взрослых</h4>
+                    <p>
+                        Кашель представляет собой вторичный защитный механизм очистки для бронхиальной системы.
+                    </p>
+                </div>
+
+            </div>
+
+            <!--          //////-->
+            <div class="panel">
+                <h4>Кашель у взрослых</h4>
+                <p>
+
+                </p>
+                <div class="panel-img panel-img2"></div>
+                <p>
+                    Кашель представляет собой вторичный защитный механизм очистки для бронхиальной системы, возникающий при повреждении основного механизма очистки – мукоцилиарного клиренса (например, при курении) или при попадании в дыхательные пути инородного материала (при ингаляции, гиперсекреции, отеке легких, задымленности или запыленности воздуха).
+
+                    Кашлевой рефлекс начинается со стимуляции механорецепторов (миелинизированных быстро адаптирующихся, т. н. «раздражительных», рецепторов). Кашлевой рефлекс может быть вызван сигналом из любого участка, где есть кашлевые рецепторы: по всей области верхних и нижних дыхательных путей, в паренхиме легких, а также в плевре, перикарде, диафрагме, в пищеводе и в желудке. Вместе с тем рецепторы распределены неравномерно: наиболее густо – в гортани и рядом с ней (в глотке, трахее, крупных бронхах).
+
+                    Эффективный кашель при необходимости позволяет очистить различные участки дыхательных путей. В альвеолах, бронхиолах и мелких бронхах нет рецепторов, способных инициировать кашлевой рефлекс. Вначале секрет «вытесняется» из периферийных зон посредством мукоцилиарного клиренса и динамического сжатия, и далее транспортируется в средние или крупные бронхи (до 5-го или 6-го порядка). Они содержат кашлевые рецепторы, раздражение которых вызывает кашель. Объем дыхания непосредственно перед кашлем определяет, какая часть дыхательных путей очищается (между гортанью и бронхами 5-6-го порядка).
 
 
 
-<a name="block-5"></a>
+                    Кашель – это очень распространенный симптом, негативно влияющий на качество жизни. Примерно 30% населения страдает этим недугом, а в период обострения острых инфекционных заболеваний этот показатель может увеличиваться до 60-80%1. Кашель — это не болезнь, а реакция организма на различные патологические процессы, связанные с дыхательными путями2.
+
+                    Клинически кашель подразделяют на продуктивный и сухой, хотя границы между этими категориями нечеткие. Продуктивный кашель в 24 часов обычно приводит к выделению 30 мл мокроты (что эквивалентно объему 2 столовых ложек).
+
+                    Наверняка каждый человек, столкнувшийся с этим неприятным симптомом, задавался вопросом – как вылечить кашель? Противокашлевые средства широко представлены на фармацевтическом рынке, они продаются в различных лекарственных формах: сиропы, леденцы, капли, таблетки.
+
+                    Помните, что лечение любого кашля желательно начинать с консультации специалиста, который поставит правильный диагноз, учтёт все сопутствующие кашлю симптомы и назначит необходимое лечение.  Многие врачи отдают предпочтение препаратам растительного происхождения с натуральным составом.
+
+                    Препарат на основе сухого экстракта листьев плюща EA 575® представлен в двух формах - сироп и капли. EA 575® разжижает мокроту и облегчает её непосредственное выведение из дыхательных путей, то есть оказывает муколитическое действие. В состав лекарственного препарата входит сухой экстракт листьев плюща, который оказывает противокашлевое, отхаркивающее, противовоспалительное и антимикробное действие, способствует снятию спазма бронхов.
+
+                    Большим достоинством препарата является тот факт, что это лекарство универсально – оно одинаково эффективно как при сухом кашле, так и при влажном.
+
+                    И пускай кашель не тревожит Вас и людей, которые Вас окружают. Будьте здоровы!
+
+
+
+                    1  Чикина С. Ю. Кашель: основные принципы диагностики и лечения // Лечебное дело. 2010. №3. URL: http://cyberleninka.ru/article/n/kashel-osnovnye-printsipy-diagnostiki-i-lecheniya
+
+                    2  Т.В.Капитан. Справочник по педиатрии. Заболевания детей раннего возраста/ МЕДпресс-информ.2017.
+                </p>
+            </div>
+            <button class="accordion accordion2"></button>
+            <div class="usless-line"></div>
+
+            <div class="usless-head-accordeon usless-head-accordeon3">
+                <div class="usless-head-accordeon_img"></div>
+                <div>
+                    <h4>История создания препарата Проспан</h4>
+                    <p>
+
+                    </p>
+                </div>
+
+            </div>
+
+            <!--          //////-->
+            <div class="panel">
+                <h4>История создания препарата Проспан</h4>
+                <p>
+
+                </p>
+                <div class="panel-img panel-img3"></div>
+                <p>
+                    В связи с тяжелыми приступами кашля у своей дочери, страдавшей от коклюша, д-р Карл Энгельгард (Karl Engelhard), фармацевт и владелец компании «Engelhard Arzneimittel GmbH & Co. KG» в 3-м поколении, в 1949 году начал исследования лечебных свойств растения Hedera helix, которое было известно своим свойством устранять кашель.
+
+                    В ходе исследований ученые из лаборатории Энгельгарда обнаружили, что листья – это та часть Hedera helix, в котором содержится наивысшая концентрация активных ингредиентов растения. Для получения действующего вещества препарата Prospan® был разработан специальный метод экстракции. Так в 1950 году появился первый лекарственный препарат Prospan® (капли Prospan®). Дальнейшие научные исследования привели к разработке других лекарственных форм, например, Сироп от кашля Prospan® (продается в Германии с 1991 г.) – не содержащий алкоголя, сахара и красителей экстракт плюща, который к тому же имеет очень приятный вишневый вкус, и поэтому особенно хорошо воспринимается детьми.
+
+                    Проспан - препарат от кашля из Германии.
+                </p>
+            </div>
+            <button class="accordion accordion3"></button>
+            <div class="usless-line"></div>
+        </div>
+        </div>
+        <a name="block-5"></a>
+    </div>
 
 
 
@@ -199,12 +327,33 @@
 
 
 
+<div class="map-container">
+    <div id="comp_wgt" data-drug="60633,40829,287745,112801,153263,307051" data-lang="ru" data-url="https://compendium.com.ua/info/168012/prospan-sup-sup-/" data-proj="проспан" style="border-color: rgb(251, 187, 1); width: 95%;"><div class="title" style="background: rgb(251, 187, 1);"><a href="https://compendium.com.ua/info/168012/prospan-sup-sup-/" title="ПРОСПАН®, Alpen Pharma AG" class="logo"><img src="https://compendium.com.ua/widget/compendium_ru.svg"></a><a href="https://compendium.com.ua/cart/" class="cart"><img src="https://compendium.com.ua/widget/cart.svg"><span id="comp_cnt" class="badge">0</span></a></div><ul role="tablist" class="nav nav-tabs"><li class="nav-item active"><a href="#comp_map" aria-controls="comp_map" role="tab" data-toggle="tab" class="nav-link active"><span>Карта</span></a></li><li class="nav-item"><a href="#comp_lst" aria-controls="comp_lst" role="tab" data-toggle="tab" class="nav-link">В аптеку</a></li><li class="nav-item"><a href="#comp_crt" aria-controls="comp_crt" role="tab" data-toggle="tab" class="nav-link"><span>Корзина</span></a></li></ul><div class="tab-content"><div id="comp_inf" class="tab-pane" style="height: 342px;"></div><div id="comp_map" class="tab-pane active" style="height: 342px;"></div><div id="comp_lst" class="tab-pane" style="height: 342px;"></div><div id="comp_crt" class="tab-pane" style="height: 342px;"></div></div></div><link rel="stylesheet" href="https://geowidget.morion.ua/css/style.css" type="text/css" media="all"/><link rel="stylesheet" href="https://compendium.com.ua/widget/widget.css" type="text/css" media="all"/><script src="https://compendium.com.ua/widget/widget.js" defer></script>
+</div>
 
-
-
-
-<a name="block-6"></a>
-
+<div class="disclamer-container">
+    <div class="disclamer-main">
+        <p>
+            Доказательная база
+        </p>
+        <p>
+            * Healthcare Marketing Magazine,5.2017
+        </p>
+        <ol>
+            <li>           	Kardos P et al. Guidelines of the German Respiratory Society for Diagnosis and Treatment of Adults Suffering from Acute, Subacute and Chronic Cough. Pneumologie 2019; 73: 143–180.
+            </li>
+            <li>           	Лечение кашля у детей: от разнообразия подходов к логическому выводу. Крючко Т.А., Ткаченко О.Я., Вовк Ю.А. Журнал «Педиатрия. Восточная Европа.» № 3 (07), 2014.
+            </li>
+            <li>            Современный подход к лечению бронхиальной обструкции и кашля у детей. Обзор литературы. Б.М.Блохин, И.П.Лобушкова. Журнал «Кремлевская медицина.  Клинический вестник» №3, 2018.
+            </li>
+            <li>            Острый бронхит у беременных: особенности клиники, диагностики, лечения. С.В.Зайков, д.м.н., профессор, Винницкий национальный медицинский университет им. Н.И.Пирогова. Медицинская газета «Журнал здоровье Украины», междисциплинарные проблемы № 4 (257), февраль 2011.
+            </li>
+        </ol>
+        <p class="disclamer-main_sub">
+            НА ПРАВАХ РЕКЛАМЫ. ЛЕКАРСТВЕННОЕ СРЕДСТВО, ПРИМЕНЯЕМОЕ ДЛЯ СИМПТОМАТИЧЕСКОГО ЛЕЧЕНИЯ ПРОСТУДНЫХ ЗАБОЛЕВАНИЙ, СОПРОВОЖДАЮЩИХСЯ КАШЛЕМ. ИМЕЮТСЯ ПРОТИВОПОКАЗАНИЯ. ВОЗМОЖНЫ ПОБОЧНЫЕ ЭФФЕКТЫ. Препарат не следует применять в период беременности и лактации. ПЕРЕД ПРИМЕНЕНИЕМ ОЗНАКОМЬТЕСЬ С ИНСТРУКЦИЕЙ И ПРОКОНСУЛЬТИРУЙТЕСЬ С ВРАЧОМ.
+        </p>
+    </div>
+</div>
 
 
 
@@ -214,15 +363,17 @@
         </div>
     <div class="disclamer-tra__inner">
         <div class="logo-block">
-            <a class="disclamer-tra__alpen disclamer-tra__klein klein-desctop" href=""><p><b>Виробник</b><br>Др. Густав Кляйн<br> ГмбХ & Ко. КГ,<br>(Німеччина)</p></a>
-
-
-            <p class="dt1">
-                Реклама лікарського засобу.Перед застосуванням обов'язково проконсультуватися з лікарем та ознайомитися з інструкцією для застосування. Зберігати у недоступному для дітей місці. Гастритол : Р.П. UA/8950/01/01 от 26.11.18 Постачальник: Др. Густав Кляйн ГМБ&Ко.КГ, Целль-ам-Хармерсбах, Німеччина. Ексклюзивний дистриб'ютор: ПрАТ "Натурфарм", вул. Лісова 30 - А, Пуща-Водиця, м. Київ, 04075; телефон: (044) 401-81-03
-            </p>
-
-            <a class="disclamer-tra__alpen disclamer-tra__klein klein-mob" href=""><p><b>Виробник</b><br>Др. Густав Кляйн<br> ГмбХ & Ко. КГ, (Німеччина)</p></a>
-            <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p><b>Постачальник</b><br>Альпен Фарма АГ<br>(Швейцарія)</p></a>
+            <div class="logo1">
+                <div class="logo1-img"></div>
+                <p>Производитель Энгельхард Арцнаймиттель Гмбх и Ко. (Германия)<br>РУ: МЗ РБ капли № 9429/10/16 от 02.03.2016 бессрочно, сироп 158/94/02/12/18 от 05.03.2018 бессрочно.
+                </p>
+            </div>
+            <div class="logo2">
+                <div class="logo2-img"></div>
+                <p>Официальный представитель в РБ: AO “Alpen Pharma AG” (Швейцарская Конфедерация).<br>
+                    Представительство в РБ: 220053, г. Минск, ул. Пархоменко, 3, офис 1Б<br>
+                    www.alpenpharma.com   info.belarus@alpenpharma.com</p>
+            </div>
         </div>
     </div>
 
