--- a/prospan-new/index.html
+++ b/prospan-new/index.html
@@ -81,7 +81,7 @@
     <div class="header-block_outer">
         <div class="header-block_inner">
             <div class="header-block_content">
-                <h1>Cила природы<br> против кашля</h1>
+                <h1>Cила природы<br>против кашля</h1>
                 <div class="header-block_img">
                     <div class="header-block_img-germ"></div>
                 </div>
@@ -128,7 +128,7 @@
 
             </div>
             <h2>СОСТАВ И ДЕЙСТВИЕ</h2>
-            <p>Оригинальный стандартизированный сухой экстракт листье<br>в плюща EA 575®, оказывающий комплексное действие при всех видах кашля</p>
+            <p>Оригинальный стандартизированный сухой экстракт листьев <br>плюща EA 575®, оказывающий комплексное действие при всех видах кашля</p>
         </div>
     </div>
 
