--- a/prospan-new/index.html
+++ b/prospan-new/index.html
@@ -333,7 +333,7 @@
 
 <div class="disclamer-container">
     <div class="disclamer-main">
-        <p>
+        <p class="disclamer-main_title">
             Доказательная база
         </p>
         <p>
