--- a/prospan-new/index.html
+++ b/prospan-new/index.html
@@ -28,35 +28,35 @@
                 <a class="navmenu" href="#block-4">Полезная информация</a>
 
                 <a class=" where-to-buy" href="#block-5">ДЕ КУПИТИ</a>
-                <a class="lang lang-dop"><b>RU</b></a><a class="lang" href="index-ru.html"><p>EN</p></a>
+                <a class="lang lang-dop"><b>RU</b></a><a class="lang" href=""><p>EN</p></a>
             </div>
 
             <!--        mobile menu-->
 
             <div class="navigation-top" role="navigation">
                 <div id="menuToggle">
-                    <input type="checkbox" /> <span></span> <span></span> <span></span>
+                    <input class="this-inpt" type="checkbox" /> <span></span> <span></span> <span></span>
                     <ul id="menu">
                         <li>
 
-                            <a class="navmenu menuLi" href="#block-1" >Преимущества
+                            <a class="navmenu menuLi menuLi1" href="#block-1" >Преимущества
 
                             </a>
                         </li>
                         <li>
-                            <a class="navmenu menuLi" href="#block-2">Состав и действие</a>
+                            <a class="navmenu menuLi menuLi2" href="#block-2">Состав и действие</a>
                         </li>
                         <li>
-                            <a class="navmenu menuLi" href="#block-3">Как принимать</a>
+                            <a class="navmenu menuLi menuLi3" href="#block-3">Как принимать</a>
                         </li>
                         <li>
-                            <a class="navmenu menuLi" href="#block-4">Полезная информация</a>
+                            <a class="navmenu menuLi menuLi4" href="#block-4">Полезная информация</a>
                         </li>
                         <li>
-                            <a class=" where-to-buy" href="#block-5">ГДЕ КУПИТЬ</a>
+                            <a class=" where-to-buy menuLi5" href="#block-5">ГДЕ КУПИТЬ</a>
                         </li>
                         <li>
-                            <a class="lang lang-dop"><b>RU</b></a><a class="lang" href="index-ru.html"><p>EN</p></a>
+                            <a class="lang lang-dop"><b>RU</b></a><a class="lang" href=""><p>EN</p></a>
                         </li>
                     </ul>
                 </div>
