--- a/prospan-new/index.html
+++ b/prospan-new/index.html
@@ -28,8 +28,7 @@
                 <a class="navmenu" href="#block-4">Полезная информация</a>
 
                 <a class=" where-to-buy" target="_blank" href="https://tabletka.by/search?request=%D0%BF%D1%80%D0%BE%D1%81%D0%BF%D0%B0%D0%BD">ГДЕ КУПИТЬ</a>
-                <a class="lang lang-dop"><b>RU</b>
-                </a>
+<!--                <a class="lang lang-dop"><b>RU</b></a>-->
 <!--                <a class="lang" href=""><p>EN</p>-->
 <!--                </a>-->
             </div>
@@ -59,7 +58,7 @@
                             <a class=" where-to-buy menuLi5" target="_blank" href="https://tabletka.by/search?request=%D0%BF%D1%80%D0%BE%D1%81%D0%BF%D0%B0%D0%BD">ГДЕ КУПИТЬ</a>
                         </li>
                         <li>
-                            <a class="lang lang-dop"><b>RU</b></a>
+<!--                            <a class="lang lang-dop"><b>RU</b></a>-->
 <!--                            <a class="lang" href=""><p>EN</p></a>-->
                         </li>
                     </ul>
