--- a/prospan-new/index.html
+++ b/prospan-new/index.html
@@ -259,27 +259,27 @@
                 </p>
                 <div class="panel-img panel-img2"></div>
                 <p>
-                    Кашель представляет собой вторичный защитный механизм очистки для бронхиальной системы, возникающий при повреждении основного механизма очистки – мукоцилиарного клиренса (например, при курении) или при попадании в дыхательные пути инородного материала (при ингаляции, гиперсекреции, отеке легких, задымленности или запыленности воздуха).
+                    Кашель представляет собой вторичный защитный механизм очистки для бронхиальной системы, возникающий при повреждении основного механизма очистки – мукоцилиарного клиренса (например, при курении) или при попадании в дыхательные пути инородного материала (при ингаляции, гиперсекреции, отеке легких, задымленности или запыленности воздуха).<br>
 
-                    Кашлевой рефлекс начинается со стимуляции механорецепторов (миелинизированных быстро адаптирующихся, т. н. «раздражительных», рецепторов). Кашлевой рефлекс может быть вызван сигналом из любого участка, где есть кашлевые рецепторы: по всей области верхних и нижних дыхательных путей, в паренхиме легких, а также в плевре, перикарде, диафрагме, в пищеводе и в желудке. Вместе с тем рецепторы распределены неравномерно: наиболее густо – в гортани и рядом с ней (в глотке, трахее, крупных бронхах).
+                    Кашлевой рефлекс начинается со стимуляции механорецепторов (миелинизированных быстро адаптирующихся, т. н. «раздражительных», рецепторов). Кашлевой рефлекс может быть вызван сигналом из любого участка, где есть кашлевые рецепторы: по всей области верхних и нижних дыхательных путей, в паренхиме легких, а также в плевре, перикарде, диафрагме, в пищеводе и в желудке. Вместе с тем рецепторы распределены неравномерно: наиболее густо – в гортани и рядом с ней (в глотке, трахее, крупных бронхах).<br>
 
-                    Эффективный кашель при необходимости позволяет очистить различные участки дыхательных путей. В альвеолах, бронхиолах и мелких бронхах нет рецепторов, способных инициировать кашлевой рефлекс. Вначале секрет «вытесняется» из периферийных зон посредством мукоцилиарного клиренса и динамического сжатия, и далее транспортируется в средние или крупные бронхи (до 5-го или 6-го порядка). Они содержат кашлевые рецепторы, раздражение которых вызывает кашель. Объем дыхания непосредственно перед кашлем определяет, какая часть дыхательных путей очищается (между гортанью и бронхами 5-6-го порядка).
+                    Эффективный кашель при необходимости позволяет очистить различные участки дыхательных путей. В альвеолах, бронхиолах и мелких бронхах нет рецепторов, способных инициировать кашлевой рефлекс. Вначале секрет «вытесняется» из периферийных зон посредством мукоцилиарного клиренса и динамического сжатия, и далее транспортируется в средние или крупные бронхи (до 5-го или 6-го порядка). Они содержат кашлевые рецепторы, раздражение которых вызывает кашель. Объем дыхания непосредственно перед кашлем определяет, какая часть дыхательных путей очищается (между гортанью и бронхами 5-6-го порядка).<br>
 
 
 
-                    Кашель – это очень распространенный симптом, негативно влияющий на качество жизни. Примерно 30% населения страдает этим недугом, а в период обострения острых инфекционных заболеваний этот показатель может увеличиваться до 60-80%1. Кашель — это не болезнь, а реакция организма на различные патологические процессы, связанные с дыхательными путями2.
+                    Кашель – это очень распространенный симптом, негативно влияющий на качество жизни. Примерно 30% населения страдает этим недугом, а в период обострения острых инфекционных заболеваний этот показатель может увеличиваться до 60-80%1. Кашель — это не болезнь, а реакция организма на различные патологические процессы, связанные с дыхательными путями<sup>2</sup>.<br>
 
-                    Клинически кашель подразделяют на продуктивный и сухой, хотя границы между этими категориями нечеткие. Продуктивный кашель в 24 часов обычно приводит к выделению 30 мл мокроты (что эквивалентно объему 2 столовых ложек).
+                    Клинически кашель подразделяют на продуктивный и сухой, хотя границы между этими категориями нечеткие. Продуктивный кашель в 24 часов обычно приводит к выделению 30 мл мокроты (что эквивалентно объему 2 столовых ложек).<br>
 
-                    Наверняка каждый человек, столкнувшийся с этим неприятным симптомом, задавался вопросом – как вылечить кашель? Противокашлевые средства широко представлены на фармацевтическом рынке, они продаются в различных лекарственных формах: сиропы, леденцы, капли, таблетки.
+                    Наверняка каждый человек, столкнувшийся с этим неприятным симптомом, задавался вопросом – как вылечить кашель? Противокашлевые средства широко представлены на фармацевтическом рынке, они продаются в различных лекарственных формах: сиропы, леденцы, капли, таблетки.<br>
 
-                    Помните, что лечение любого кашля желательно начинать с консультации специалиста, который поставит правильный диагноз, учтёт все сопутствующие кашлю симптомы и назначит необходимое лечение.  Многие врачи отдают предпочтение препаратам растительного происхождения с натуральным составом.
+                    Помните, что лечение любого кашля желательно начинать с консультации специалиста, который поставит правильный диагноз, учтёт все сопутствующие кашлю симптомы и назначит необходимое лечение.  Многие врачи отдают предпочтение препаратам растительного происхождения с натуральным составом.<br>
 
-                    Препарат на основе сухого экстракта листьев плюща EA 575® представлен в двух формах - сироп и капли. EA 575® разжижает мокроту и облегчает её непосредственное выведение из дыхательных путей, то есть оказывает муколитическое действие. В состав лекарственного препарата входит сухой экстракт листьев плюща, который оказывает противокашлевое, отхаркивающее, противовоспалительное и антимикробное действие, способствует снятию спазма бронхов.
+                    Препарат на основе сухого экстракта листьев плюща EA 575® представлен в двух формах - сироп и капли. EA 575® разжижает мокроту и облегчает её непосредственное выведение из дыхательных путей, то есть оказывает муколитическое действие. В состав лекарственного препарата входит сухой экстракт листьев плюща, который оказывает противокашлевое, отхаркивающее, противовоспалительное и антимикробное действие, способствует снятию спазма бронхов.<br>
 
-                    Большим достоинством препарата является тот факт, что это лекарство универсально – оно одинаково эффективно как при сухом кашле, так и при влажном.
+                    Большим достоинством препарата является тот факт, что это лекарство универсально – оно одинаково эффективно как при сухом кашле, так и при влажном.<br>
 
-                    И пускай кашель не тревожит Вас и людей, которые Вас окружают. Будьте здоровы!
+                    И пускай кашель не тревожит Вас и людей, которые Вас окружают. Будьте здоровы!<br>
 
 
 
@@ -310,9 +310,9 @@
                 </p>
                 <div class="panel-img panel-img3"></div>
                 <p>
-                    В связи с тяжелыми приступами кашля у своей дочери, страдавшей от коклюша, д-р Карл Энгельгард (Karl Engelhard), фармацевт и владелец компании «Engelhard Arzneimittel GmbH & Co. KG» в 3-м поколении, в 1949 году начал исследования лечебных свойств растения Hedera helix, которое было известно своим свойством устранять кашель.
+                    В связи с тяжелыми приступами кашля у своей дочери, страдавшей от коклюша, д-р Карл Энгельгард (Karl Engelhard), фармацевт и владелец компании «Engelhard Arzneimittel GmbH & Co. KG» в 3-м поколении, в 1949 году начал исследования лечебных свойств растения Hedera helix, которое было известно своим свойством устранять кашель.<br>
 
-                    В ходе исследований ученые из лаборатории Энгельгарда обнаружили, что листья – это та часть Hedera helix, в котором содержится наивысшая концентрация активных ингредиентов растения. Для получения действующего вещества препарата Prospan® был разработан специальный метод экстракции. Так в 1950 году появился первый лекарственный препарат Prospan® (капли Prospan®). Дальнейшие научные исследования привели к разработке других лекарственных форм, например, Сироп от кашля Prospan® (продается в Германии с 1991 г.) – не содержащий алкоголя, сахара и красителей экстракт плюща, который к тому же имеет очень приятный вишневый вкус, и поэтому особенно хорошо воспринимается детьми.
+                    В ходе исследований ученые из лаборатории Энгельгарда обнаружили, что листья – это та часть Hedera helix, в котором содержится наивысшая концентрация активных ингредиентов растения. Для получения действующего вещества препарата Prospan® был разработан специальный метод экстракции. Так в 1950 году появился первый лекарственный препарат Prospan® (капли Prospan®). Дальнейшие научные исследования привели к разработке других лекарственных форм, например, Сироп от кашля Prospan® (продается в Германии с 1991 г.) – не содержащий алкоголя, сахара и красителей экстракт плюща, который к тому же имеет очень приятный вишневый вкус, и поэтому особенно хорошо воспринимается детьми.<br>
 
                     Проспан - препарат от кашля из Германии.
                 </p>
